# Aegis

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/services/: __init__.py  action_plan.py  agents.py  audit_store.py  bridge_analysis.py  bridge_catalog.py  commander.py  emergency_feed.py  forecast_timeline.py  groq.py  live_data.py  orchestrator.py  pdf_report.py  rate_limit.py  report_store.py
backend/app/services/agent_workflow/: __init__.py  base.py  coordinator.py  emergency.py  flood.py  infrastructure.py  routing.py  weather.py  workflow.py
backend/db/: init.sql
backend/tests/: test_orchestrator.py  test_pdf_report.py
demo/: bridge_failure_scenario.json  emergency_response_demo.json  hurricane_flood_bridge.json
docs/: AI_ML_ROADMAP.md  DEMO_SCRIPT.md  DEVPOST_SUBMISSION.md  PROJECT_STATUS.md  architecture.md
docs/screenshots/: README.md
frontend/: app.js  index.html  styles.css
models/: README.md
