[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-api"
version = "0.1.0"
description = "Explainable infrastructure risk-monitoring API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "groq>=0.11,<1.0",
  "httpx>=0.27,<1.0",
  "python-dotenv>=1.0,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "reportlab>=4.0,<5.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "httpx>=0.27,<1.0", "pypdf>=5.0,<7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app", "app.services", "app.services.agent_workflow"]
